--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Razorpay</title>
-   <link href="src/index.css" rel="stylesheet">
+   <script type="module" src="/src/main.jsx"></script>
+
 </head>
 
 <body>
