--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Razorpay</title>
    <script type="module" src="/src/main.jsx"></script>
+   <link href="https://cdn.tailwindcss.com" rel="stylesheet">
+
 
 </head>
 
