--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Razorpay</title>
    <script type="module" src="/src/main.jsx"></script>
-   <link href="https://cdn.tailwindcss.com" rel="stylesheet">
-
+   
 
 </head>
 
 <body>
 
-  <div class="  relative ">
+  <div class="w-full relative ">
     <!-- NavBar Of the Razorpay clone -->
 
     <nav class=" nav w-full h-20 fixed top-0 bg-white z-50 transition-shadow duration-300 ">
