--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <body>
 
+
+  <h1 class="text-4xl font-bold text-blue-700">Hello Tailwind!</h1>
+
+
   <div class="w-full relative ">
     <!-- NavBar Of the Razorpay clone -->
 
